--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,9 +1,7 @@
 <%= simple_form_for @post do |f| %>
   <% if @post.errors.any? %>
-    <div id="error_explanation">
-      <h2>
+    <div id="error_explanation alert alert-danger">
         <%= "#{pluralize(@post.errors.count, "error")} prohibited this post from being saved:" %>
-      </h2>
       <ul>
         <% @post.errors.full_messages.each do |msg| %>
           <li>
@@ -14,15 +12,22 @@
     </div>
   <% end %>
 
-  <div class="form-group">
-    <%= f.input :title, class: "form-control" %>
-  </div>
+  <% if flash[:notice] -%>
+    <div class = "alert alert-success"><%= flash[:notice] %></div>
+  <% end %>
 
-  <div class="form-group">
-    <%= f.input :body, :as => :ckeditor, input_html: {:ckeditor => {:toolbar => 'FULL'}}, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.button :submit %>
+  <div class="row justify-content-between">
+    <div class="col-md-8 col">
+      <div class="form-group post-title"  style="width: 700px;">
+        <%= f.input :title, class: "form-control" %>
+      </div> 
+      <div class="form-group">
+        <%= f.input :body, :as => :ckeditor, input_html: {:ckeditor => {:toolbar => 'FULL'}}, class: "form-control" %>
+      </div>
+    
+      <div class="form-group">
+        <%= f.button :submit %>
+      </div>
+    </div>
   </div>
 <% end %>
