--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,10 @@
 <div class="col-sm-11 col-xs-12 blog-content">
   <h2 class="text-center"><%= @post.title %></h2>
+  
   <h5 class="text-center"><%= @post.created_at.strftime('%b %d, %Y') %></h5>
   <div><%= raw @post.body %></div>
+  <% if admin_signed_in? %>
+    <%= link_to "Edit", edit_post_path(@post), class: "btn btn-sm btn-default" %>
+    <%= link_to "Delete", post_path(@post), class: "btn btn-sm btn-danger", data: {:confirm => "Are you sure?"}, method: :delete %>
+  <% end %>
 </div>
