--- a/app/views/admins/registrations/edit.html.erb
+++ b/app/views/admins/registrations/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="col-sm-offset-4 col-sm-4 col-xs-12">
-  <h2 class="text-center">Edit <%= resource_name.to_s.humanize %></h2>
+  <h3 class="text-center">Edit <%= resource_name.to_s.humanize %></h3>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: "form" }) do |f| %>
     <%= devise_error_messages! %>
@@ -28,13 +28,6 @@
       <%= f.password_field :current_password, autocomplete: "off", class: "form-control" %>
     </div>
 
-    <%= f.submit "Update", class: "btn btn-primary btn-lg" %>
+    <%= f.submit "Update", class: "btn btn-primary btn-sm" %>
   <% end %>
-
-  <h3 class="text-center">Cancel my account</h3>
-
-  <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger btn-lg" %></p>
-
-  <%= link_to "Back", :back, class: "btn btn-primary btn-lg" %>
-
 </div>
