--- a/app/assets/stylesheets/post.scss
+++ b/app/assets/stylesheets/post.scss
@@ -3,5 +3,9 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .post-title {
-  width: 700px;
+  width: 750px;
+}
+
+textarea {
+  height: auto;
 }
