--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -18,11 +18,11 @@
 
   <div class="row justify-content-between">
     <div class="col-md-8 col">
-      <div class="form-group post-title"  style="width: 700px;">
+      <div class="form-group post-title">
         <%= f.input :title, class: "form-control" %>
       </div> 
       <div class="form-group">
-        <%= f.input :body, :as => :ckeditor, input_html: {:ckeditor => {:toolbar => 'FULL'}}, class: "form-control" %>
+        <%= f.text_area :body, class: "form-control", style: "height: 500px" %>
       </div>
     
       <div class="form-group">
