--- a/app/views/admins/registrations/new.html.erb
+++ b/app/views/admins/registrations/new.html.erb
@@ -30,7 +30,7 @@
       <% end %>
     </div>
 
-    <%= f.submit "Sign up", class: "btn btn-primary btn-lg" %>
+    <%= f.submit "Sign up", class: "btn btn-primary btn-sm" %>
   <% end %>
 
 </div>
