--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,7 +6,7 @@
         <h2><%= post.title %></h2>
         <h6><%= post.created_at.strftime('%b %d, %Y') %></h6>
       </div>
-      <div>
+      <div class="text-left">
         <%= raw(post.body).truncate(358) %>
       </div>
       <div class="text-center">
